--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 body {
   font-family: Rubik,sans-serif;
   font-size: 0.7rem;
@@ -5,7 +8,6 @@ body {
   padding: 0;
   background-color: #0e6cff;
 }
-
 .topnav {
   overflow: hidden;
   background-color: #0e6cff;
@@ -13,7 +15,6 @@ body {
   margin: 0 auto;
   align-items: center;
 }
-
 .topnav a {
   float: right;
   display: block;
@@ -28,22 +29,18 @@ body {
   float: left;
   padding: 1rem 2rem;
 }
-
 .topnav a.active {
   text-decoration: underline;
   color: #fff;
   text-decoration-thickness: 2px;
   text-underline-offset: 5px;
   opacity: 1;
-
 }
-
 .topnav a:hover {
   text-decoration: underline;
   text-decoration-thickness: 2px;
   text-underline-offset: 5px;
   opacity: 1;
-
 }
 .topnav .icon {
   display: none;
@@ -57,13 +54,12 @@ body {
   }
   .topnav {
     overflow: hidden;
-    background-color: #0e6cff;
+    background-color: #000;
     width: 100%;
     padding:auto 0;
     margin:auto 0;
   }
 }
-
 @media screen and (max-width: 600px) {
   .topnav {
     overflow: hidden;
