--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -4,18 +4,19 @@
   background-image: url("http://zooki.react.themesbrand.com/static/media/home-2-bg.e74a5beee052680d051a.png"); 
   background-position: 50%; 
   background-size: cover; 
-  height: 100vh; 
+  height: 90vh; 
   position: relative; 
   font-family: Rubik,sans-serif;
 }
 #home .wrapper {
-  margin: 0 auto;
+  margin: 4rem auto;
   max-width: 1050px;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  align-items: center;
+  align-items: center !important;
+  justify-content: center;
 }
-#home .left{ 
+#home .left  { 
   font-size: larger;
   color: #fff;
 }
