--- a/src/css/About.css
+++ b/src/css/About.css
@@ -12,12 +12,12 @@
   width: clamp(300px,100%, 1100px);
   margin: 0 auto;
 }
-#about h2 {
+/* #about h2 {
   text-transform: uppercase;
   font-size: 2rem;
   font-weight: 400 !important;
-}
-#about .grid1 {
+} */
+.grid1 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   text-align: center;
@@ -35,7 +35,7 @@
   font-size: 150%;
   color: #212529;
 }
-.grid1 .icon {
+#about .icon {
   font-size: 2rem;
   text-align: center;
   align-items: center;
@@ -46,7 +46,7 @@
   padding: 0.2rem;
   border: 6px solid transparent;
 }
-.grid1 div:hover > .icon {
+#about div:hover > .icon {
   background-color: #0e6cff; 
   border: 6px solid #e9eff9;
   color: #fff;
@@ -88,19 +88,6 @@
   border: 5px solid #e9eff9;
   border-radius: 5px;
   margin: 1rem;
-}
-.title-border-simple{
-  background-color: #005bea;
-  height: 2px;
-  top: 15px;
-  width: 120px;
-}
-.title-border-colored{
-  background-color: #ff8700;
-  height: 6px;
-  top: 13px;
-  width: 30px;
-  border-radius: 50px;
 }
 @media screen and (max-width: 600px) {
   #about .grid1 {
