Added feature text

--- a/src/css/Feature.css
+++ b/src/css/Feature.css
@@ -41,5 +41,5 @@
   border-radius: 50%;
   padding: 0.2rem;
   border: 6px solid transparent;
-  background-color: #e9eff9; 
+  /* background-color: #e9eff9;  */
 }
