updated hover effect

--- a/src/css/Services.css
+++ b/src/css/Services.css
@@ -16,7 +16,7 @@
   border: 1px solid #dedede;
   margin: 1rem;
   border-radius: 5px;
-  padding: 1rem;
+  padding: 2.7rem 1.2rem;
   color: #6c757d;
 }
 .more {
@@ -34,12 +34,25 @@
   padding: 0.2rem;
   border: 6px solid transparent;
   background-color: #e9eff9; 
+  margin-bottom: 1rem;
 }
 #service .card:hover > .icon {
   background-color: #0e6cff; 
   border: 6px solid #e9eff9;
   color: #fff !important;
 }
-#service a {
-  margin-top: 1rem;
+#service .grid1 a {
+  text-decoration: none;
+  font-size: 150%;
+  color: #212529;
+  margin: 2rem 0 !important;
+  padding: 1rem 0;
+}
+
+#service .card:hover {
+  border-color: #fff;
+  box-shadow: 0 0 10px rgb(0 0 0 / 10%);
+  -webkit-transform: scale(1.01);
+  transform: scale(1.01);
+  transition: all .5s;
 }
