--- a/src/css/About.css
+++ b/src/css/About.css
@@ -25,7 +25,7 @@
   color: #6c757d;
   line-height: 1.5;
 }
-.grid1 a {
+#about .grid1 a {
   text-decoration: none;
   font-size: 150%;
   color: #212529;
