--- a/src/css/Feature.css
+++ b/src/css/Feature.css
@@ -47,7 +47,9 @@
   zoom: 250%;
 }
 #feature .image img:hover {
-  /* zoom:110%; */
+    -webkit-transform: scale(1.05);
+    transform: scale(1.05);
+    transition: all .5s;
 }
 #feature .inner-image{
   position: relative;
