--- a/src/css/Pricing.css
+++ b/src/css/Pricing.css
@@ -1,6 +1,5 @@
 #pricing {
   height: 100vh;
-  background-color: #fcdef1;
 }
 #pricing .wrapper {
   width: clamp(300px,100%, 1100px);
@@ -10,6 +9,30 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   text-align: left;
-  padding: 4rem 0;
-
+  padding: 3rem 0;
+}
+.price-card {
+  margin: 1rem;
+  padding: 2rem 1rem;
+  border: 2px solid grey;
+}
+.price-card p{
+  line-height: 1.5;
+  color: grey;
+}
+.price-card a{
+  text-decoration: none;
+  background-color: #fff;
+  color: #015be9;
+  border: 2px solid #015be9;
+  padding: 10px;
+  border-radius: 5px;
+  margin: 1rem 0 !important;
+}
+.price-card a:hover {
+  background-color: #015be9;
+  color: #fff;
+}
+.price-card .text {
+  padding: 2rem 0;
 }
