--- a/src/css/GetyInTouch.css
+++ b/src/css/GetyInTouch.css
@@ -28,9 +28,8 @@
   margin-left: 1rem;
 }
 #getInTouch .right span:first-child {
-  background-color: blue;
-  color: #fff;
   padding: 14px;
   border-radius: 50%;
   font-size: 24px;
+  border: 2px solid grey;
 }
