--- a/src/css/GetyInTouch.css
+++ b/src/css/GetyInTouch.css
@@ -1,15 +1,18 @@
 #getInTouch {
-  background-color: #efefef;
+  background-color: #f8f9fa;
 }
 #getInTouch .wrapper {
   width: clamp(300px,100%, 1100px);
-  margin: 4rem auto;
-  margin: 4rem auto;
+  margin: 4rem auto 0 auto;
   padding: 2rem 0;
 }
 #getInTouch .container {
   display:flex;
   flex-direction: row;
+  background-color: #fff;
+  box-shadow: 0 0 16px 1px rgb(41 41 41 / 8%);
+  padding: 1rem;
+  margin: 2rem auto;
 }
 #getInTouch .left {
   flex-basis: 60%;
@@ -55,4 +58,19 @@
 }
 #getInTouch .right div {
   align-items: center;
+}
+#getInTouch #subject, #message {
+  width: 100%;
+  margin: 0.4rem 1.2rem;
+  padding: 0.5rem 1rem;
+}
+#getInTouch input {
+  width: 44%;
+  padding: 0.5rem 1rem;
+}
+#getInTouch #name {
+  margin: 0.4rem 0.6rem 0.4rem 1.2rem; 
+}
+#getInTouch #email{
+  margin: 0.4rem 1.2rem 0.4rem 0.6rem;
 }
