--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,12 +1,14 @@
 .header {
-  background-color: #0e6cff;
+  background: transparent;
 }
 .topnav {
-  overflow: hidden;
-  background-color: #0e6cff;
-  width: 80%;
-  margin: 0 auto;
-  align-items: center;
+  border-radius: 0;
+  transition: all .5s ease-in-out;
+  z-index: 999;
+  left: 0;
+  position: fixed;
+  right: 0;
+  background: transparent;
 }
 .topnav a {
   float: right;
@@ -37,6 +39,9 @@
 }
 .topnav .icon {
   display: none;
+}
+.scroll {
+  background-color: #000;
 }
 
 @media screen and (max-width: 600px) {
