--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -21,10 +21,16 @@
   text-decoration: none;
   text-transform: uppercase;
   opacity: 0.7;
+  margin: 0;
+  height: 100%;
 }
 .topnav a:first-child {
   float: left;
   padding: 1rem 2rem;
+}
+.topnav a img {
+  width: 80%;
+  height: 80%;
 }
 .topnav a.active {
   text-decoration: underline;
