--- a/src/css/About.css
+++ b/src/css/About.css
@@ -39,12 +39,18 @@
   margin: 0 auto 1rem auto;
   border-radius: 50px;
   padding: 0.2rem;
-  border: 6px solid transparent;
+  border-radius: 50px;
+  height: 62px;
+  line-height: 62px;
+  transition: all .5s;
+  font-weight: 100;
+  -webkit-text-stroke: 1px #343a40 !important;
+  -webkit-text-fill-color: transparent !important;
 }
 #about div:hover > .icon {
-  background-color: #0e6cff; 
-  border: 6px solid #e9eff9;
-  color: #fff;
+  background-color: #005bea;
+  border-color: #005bea;
+  box-shadow: 0 0 0 7px rgb(0 91 234 / 15%);
 }
 #about .grid2 {
   display: grid;
