--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -71,6 +71,7 @@
     overflow: hidden;
     background-color: #0e6cff;
     width: 100%;
+    padding: 0;
   }
   .topnav.responsive {position: relative;}
   .topnav.responsive .icon {
