--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -62,12 +62,13 @@
   #home .wrapper {
     grid-template-columns: 100%;
     width: 100%;
+    /* margin-top:-20px; */
   }
   #home img {
     width: 20rem;
     height: 20rem;
   }
   #home .left {
-    margin: 1rem;
+    margin: -20px 1rem 1rem 1rem;
   }
 }
