fixed about section in mobile view

--- a/src/css/About.css
+++ b/src/css/About.css
@@ -99,5 +99,9 @@
   #about .grid2 {
     width:100%;
     grid-template-columns: 1fr;
+    margin: 0.5rem auto !important;
+  }
+  #about .grid2 .right img {
+    max-width: 400px;
   }
 }
