--- a/src/css/Pricing.css
+++ b/src/css/Pricing.css
@@ -91,3 +91,13 @@
   transition: all .5s;
   width: 20px;
 }
+@media screen and (max-width: 600px) {
+  #pricing {
+    height: auto;
+  }
+  #pricing #container {
+    width:90%;
+    grid-template-columns: 1fr;
+    margin: 0 auto;
+  }
+}
